# ethereum_max_ether_finder

./: .gitignore  README.md  application.yaml  main.py  pyproject.toml  result.txt  test.sqlite3
html/ethereum_max_ether_finder/: index.html  main.html
html/ethereum_max_ether_finder/src/: index.html
html/ethereum_max_ether_finder/src/controllers/: index.html  max_ether.html  populate_database.html
html/ethereum_max_ether_finder/src/models/: index.html  request.html  response.html
html/ethereum_max_ether_finder/src/services/: index.html
html/ethereum_max_ether_finder/src/util/: hex_converter.html  index.html  validator.html  wei_converter.html
html/ethereum_max_wei_finder/: index.html  main.html
html/ethereum_max_wei_finder/src/: index.html
html/ethereum_max_wei_finder/src/controllers/: index.html  max_wei.html  populate_database.html
html/ethereum_max_wei_finder/src/models/: index.html  request.html  response.html
html/ethereum_max_wei_finder/src/services/: index.html
html/ethereum_max_wei_finder/src/util/: hex_converter.html  index.html  validator.html
src/controllers/: main.py  max_ether.py  max_wei.py  populate_database.py
src/models/: request.py  response.py
src/services/api/: quicknode_ethereum_service.py
src/services/block_crawler/: block_crawler_service.py
src/services/database/: postgres_service.py
src/services/ethereum/: ethereum_service.py
src/services/repository/: postgres_service.py  sqlite_service.py
src/services/sources/database/: postgres_service.py
src/util/: hex_converter.py  validator.py  wei_converter.py
(+19 files in other folders)
