[tool.poetry]
name = "relayer-interview"
version = "0.1.0"
description = ""
authors = ["William Wilson <williambwilson@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"
requests = "^2.31.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
