[tool.poetry]
name = "ethereum_max_wei_finder"
version = "1.0.0"
description = ""
authors = ["William Wilson <williambwilson@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"
requests = "^2.31.0"
tqdm = "^4.66.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
